src/objects/CPAR_Feed__c/CPAR_Feed__c.object-meta.xml
<CustomObject>
    <description>Object to hold the CPAR feed data on the Contracts</description>
    <label>CPAR Feed</label>
    <nameField>
        <displayFormat>CPAR-{0000000}</displayFormat>
        <label>CPAR Feed ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CPARS Feed</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>