src/objects/CPAR_Feed__c/fields/Assessor_Office__c.field-meta.xml
<CustomField>
    <fullName>Assessor_Office__c</fullName>
    <label>Assessor Office</label>
    <type>TextArea</type>
</CustomField>