src/objects/CPAR_Feed__c/fields/Business_Relations__c.field-meta.xml
<CustomField>
    <fullName>Business_Relations__c</fullName>
    <label>Business Relations</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exceptional</fullName>
            </value>
            <value>
                <fullName>Very Good</fullName>
            </value>
            <value>
                <fullName>Satisfactory</fullName>
            </value>
            <value>
                <fullName>Marginal</fullName>
            </value>
            <value>
                <fullName>Unsatisfactory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>