src/objects/CPAR_Feed__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>CPARS Feed</relationshipLabel>
    <relationshipName>CPARS_Feed</relationshipName>
    <type>Lookup</type>
</CustomField>